@@ -231,7 +231,7 @@
     "washington capitals": "Caps",
     "washington nationals": "Nats",
     "washington redskins": "'Skins",
-    "washington wizards": "Wiz",
+    "washington wizards": "Wizards",
     "watford": "Hornets",
     "west bromwich albion": "Baggies",
     "west ham united": "Irons",
